# TicTacToe

./: CMakeLists.txt  main.cpp
Core/Field/: CellPosition.cpp  Field.cpp  FieldRender.cpp  InvalidCellValueException.cpp
Core/Game/: Game.cpp  GameEngine.cpp  GameResultCalculator.cpp  GameStatus.cpp  MoveException.cpp
Core/Includes/: CellPosition.h  CellValues.h  Field.h  FieldRender.h  Game.h  GameEngine.h  GameResult.h  GameResultCalculator.h  GameStatus.h  GameStatuses.h  InvalidCellValueException.h  MoveException.h  MoveExceptionReasons.h  Player.h  PlayerSide.h
Core/Player/: Player.cpp
